test/scc/expr/semantic-errors/115.a
115.t:3:15: error: braces around scalar initializer